# video-decomposition

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  status_counts.py  temp.py
scripts/: diag.cmd  diag.py  envcheck.cmd  failure_summary.cmd  failure_summary.py  poll.cmd  poll_loop.ps1  requeue_empty_transcripts.cmd  requeue_empty_transcripts.py  requeue_internal.cmd  requeue_internal.py  retry_chirp2.cmd  retry_failed.cmd  retry_plain.cmd  status.cmd  submit.cmd
src/youtube_decompose/: __init__.py  config.py  folders.py  google_speech.py  media.py  pipeline.py  poll_transcription_batches.py  stages.py  state.py  submission.py  submit_audio_extraction.py  submit_gcp_stt_batches.py  submit_image_decomposition.py
src/youtube_decompose/job_state/: __init__.py  state.py  util.py
tests/: test_state.py
